Update from ./MakeADifference

--- a/contact-us.html
+++ b/contact-us.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Make A Difference</title>
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <meta charset="utf-8">
+    <title>Contact us : Make A Difference</title>
+    <link rel="stylesheet" media="screen" href="index.css" type="text/css">
 </head>
 <body>
 <nav>
