--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Make A Difference</title>
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" media="screen" href="index.css" type="text/css">
 </head>
 <body>
 <nav>
@@ -24,36 +25,29 @@
     tincidunt.
 </p>
 
-<p>
-    Praesent congue, lacus quis venenatis aliquet, tortor nisl tristique metus, nec congue dui augue quis velit. Sed at
-    dolor interdum, porttitor sapien ac, iaculis magna. Cras id lobortis lectus. Phasellus eget enim nec lorem
-    sollicitudin vehicula. Etiam tempor est vel elit commodo, quis pretium enim ornare. Vestibulum lobortis ligula
-    augue, eu tincidunt eros porta pharetra. Maecenas vitae suscipit nulla. Nunc sit amet mi pretium, suscipit metus id,
-    tristique mi. Pellentesque ac scelerisque libero. In a magna sed neque condimentum porta quis non nisi.
-</p>
-
-<p>
-    Sed erat libero, tempus in ante vel, facilisis tincidunt dui. Nam non odio ullamcorper, commodo ante sed, placerat
-    mauris. Aliquam urna est, pretium nec orci id, suscipit tempus diam. Suspendisse tincidunt tempus convallis. Ut
-    pharetra diam diam, eget sagittis lectus feugiat nec. Donec sed facilisis massa, blandit varius orci. Morbi vel diam
-    ac ex mollis pretium. Ut dictum lacus quis orci pellentesque, a maximus urna malesuada. Integer at faucibus purus.
-</p>
-
-<p>
-    Vivamus rhoncus nunc elit, quis tristique nisi finibus suscipit. Nam hendrerit a metus eget pellentesque. Duis eu
-    dapibus eros. Cras pharetra augue enim, sed tristique urna blandit sit amet. Integer ultrices volutpat nunc, quis
-    lacinia nisl pulvinar nec. Fusce eu ipsum non massa consequat sollicitudin ac non mauris. Nullam facilisis sagittis
-    elementum. In vel tempus nisi, ut semper odio. Vivamus tristique eu nibh in efficitur. Aliquam nec risus accumsan,
-    semper eros at, efficitur mauris. Vestibulum ac leo id dui tincidunt hendrerit eget eu lacus.
-</p>
-
-<p>
-    Praesent eget egestas augue. Morbi vulputate mi mi, ac vehicula nisl efficitur eget. Donec consequat purus a ex
-    vestibulum fermentum. Integer mattis interdum libero, non dignissim ligula lacinia in. Cras vehicula efficitur
-    risus, et vehicula ante egestas vel. Phasellus molestie tortor dui, id ultrices libero ultrices et. Sed rhoncus
-    cursus libero, vitae fermentum turpis fringilla ut. Morbi dui neque, suscipit id nisi ut, malesuada euismod justo.
-    Donec in orci nisl. In tristique lorem at arcu accumsan efficitur. Phasellus dapibus lorem sed ante dapibus, eget
-    dignissim libero pharetra.
-</p>
+<form class="Apply" action="" id="applyForm">
+    <ul>
+        <li>
+            <h2>Apply to help</h2>
+        </li>
+        <li>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required placeholder="Add your full name" autocomplete="name">
+        </li>
+        <li>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required placeholder="Add your email address" autocomplete="email">
+        </li>
+        <li>
+            <label for="skills"></label>
+            <textarea id="skills" name="skills" required
+                      placeholder="Can you please write a sentence or two about your applicable skills and feel free to add any initial questions you might have..."></textarea>
+        </li>
+        <li>
+            <input type="submit" value="Apply">
+        </li>
+    </ul>
+</form>
+<script src="index.js"></script>
 </body>
 </html>
