Update from ./MakeADifference

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Make A Difference</title>
+    <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
     <link rel="stylesheet" media="screen" href="index.css" type="text/css">
 </head>
 <body>
