Update from ./MakeADifference

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
     <title>Make A Difference</title>
-    <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
     <link rel="stylesheet" media="screen" href="index.css" type="text/css">
 </head>
 <body>
@@ -26,32 +26,39 @@
     tincidunt.
 </p>
 
-<form class="Apply" action="" id="applyForm">
-    <ul>
-        <li>
-            <h2>Apply to help</h2>
-        </li>
-        <li>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required placeholder="Add your full name" autocomplete="name">
-            <span id="name-error" class="Apply-formError"></span>
-        </li>
-        <li>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required placeholder="Add your email address" autocomplete="email">
-            <span id="email-error" class="Apply-formError"></span>
-        </li>
-        <li>
-            <label for="skills"></label>
-            <textarea id="skills" name="skills" required
+<form class="Apply" id="applyForm">
+    <h2>Apply to help</h2>
+
+    <p>
+        <label for="nameInput">Name:
+            <input type="text" id="nameInput" name="name" required placeholder="Add your full name"
+                   autocomplete="name">
+        </label>
+        <span id="name-error" class="Apply-formError"></span>
+    </p>
+
+    <p>
+        <label for="emailInput">Email:
+            <input type="email" id="emailInput" name="email" required placeholder="Add your email address"
+                   autocomplete="email">
+        </label>
+        <span id="email-error" class="Apply-formError"></span>
+    </p>
+
+    <p>
+        <label for="skillsInput">Skills:
+            <textarea id="skillsInput" name="skills" required
                       placeholder="Can you please write a sentence or two about your applicable skills and feel free to add any initial questions you might have..."></textarea>
-            <span id="skills-error" class="Apply-formError"></span>
-        </li>
-        <li>
-            <input type="submit" value="Apply">
-        </li>
-    </ul>
+        </label>
+        <span id="skills-error" class="Apply-formError"></span>
+    </p>
+
+    <p>
+        <input type="submit" value="Apply">
+    </p>
+
 </form>
+<script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
