Update from ./MakeADifference

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>
         <label for="nameInput">Name:
             <input type="text" id="nameInput" name="name" required placeholder="Add your full name"
-                   autocomplete="name">
+                   autocomplete="on">
         </label>
         <span id="name-error" class="Apply-formError"></span>
     </p>
@@ -40,7 +40,7 @@
     <p>
         <label for="emailInput">Email:
             <input type="email" id="emailInput" name="email" required placeholder="Add your email address"
-                   autocomplete="email">
+                   autocomplete="on">
         </label>
         <span id="email-error" class="Apply-formError"></span>
     </p>
