Update from ./MakeADifference

--- a/thank-you.html
+++ b/thank-you.html
@@ -21,7 +21,7 @@
 <p>
     Thank you for your interest, <span id="ThankYou-name"></span>.
     <br>
-    Your application was saved with key <span id="ThankYou-key"></span>.
+    Your application has been saved with key <span id="ThankYou-key"></span>.
 </p>
 <p>
     Make A Difference will be in touch soon. <a href="index.html" name="Home">Home</a>
