--- a/index.html
+++ b/index.html
@@ -60,5 +60,7 @@
 </form>
 <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
 <script src="index.js"></script>
+<script src="browserHoist.js"></script>
+<script src="browserEmail.js"></script>
 </body>
 </html>
