Update from ./MakeADifference

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -17,7 +17,12 @@
 <h2>What we do</h2>
 
 <p>
-    I'm learning GIT. lkshdfkjhsdfjhdf asjdhfs dfhjhs <i>dfhkksd</i> f
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie faucibus justo in varius. Integer varius
+  ipsum vel risus volutpat eleifend. Duis sed dui placerat diam semper dignissim eu at metus. Mauris quam tortor,
+  rutrum at rutrum sed, fermentum sed purus. Aenean malesuada ipsum ut nulla tempus, ac convallis metus dapibus. Sed
+  dictum diam at velit lacinia aliquam. Nullam lectus risus, consequat eu ligula consectetur, tincidunt faucibus
+  metus. Vivamus dolor risus, congue ut massa a, consequat venenatis nulla. Praesent consequat ex non diam suscipit
+  tincidunt.
 </p>
 
 </body>
