Update from ./MakeADifference

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -16,6 +16,12 @@
 
 <h2>What we do</h2>
 
+<h3> Why we do what we do</h3>
+
+<p> "You have brains in your head. You have feet in your shoes. You can steer yourself in any direction you choose. You're on your own, and you know what you know. And you are the guy who'll decide where to go". Dr. Seuss
+
+	The M.A.D Crew are a group of like-minded individuals who want to use their professional skills to make a difference to people and organisations who do good.
+
 <p>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie faucibus justo in varius. Integer varius
   ipsum vel risus volutpat eleifend. Duis sed dui placerat diam semper dignissim eu at metus. Mauris quam tortor,
