Update from ./MakeADifference

--- a/testLogin.html
+++ b/testLogin.html
@@ -7,6 +7,8 @@
 
 <button id="loginButton">Login</button>
 
+<h4>Welcome&nbsp;<span id="welcomeName"></span></h4>
+
 <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
 <script src="testLogin.js"></script>
 </body>
