Update from ./MakeADifference

--- a/volunteer.html
+++ b/volunteer.html
@@ -45,7 +45,7 @@
         </p>
 
         <p>
-            <input type="submit" value="Apply">
+            <input type="submit" value="Apply" class="styled-button-9">
         </p>
     </form>
 </div>
