Update from ./MakeADifference

--- a/testLogin.html
+++ b/testLogin.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
+    <title>Administration : Make A Difference</title>
+    <link rel="stylesheet" media="screen" href="index.css" type="text/css">
 </head>
 <body>
-<h4>Welcome&nbsp;<span id="welcomeName"></span></h4>
+<div class="Logo">
+    <a href="/"><img border="0" src="img/madskillslogo.png" width="233px" height="154px" alt="Mad Skills logo"></a>
+</div>
+<h2>Welcome&nbsp;<span id="welcomeName"></span></h2>
 <button id="loginButton">Login</button>
 <p style="display: none" id="loginInfo">Your role is currently: <span id="role"></span> and your last login was
     <span id="lastLogin"></span> UTC.
