Update from ./MakeADifference

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <h1 class="Company-name">MAKING A DIFFERENCE SKILLS LIMITED</h1>
 
+<div class="newsflash">We are excited to be offering our first ever skills-building conference for women. You can find out more about the More Than Rubies Conference and purchase tickets ​<a href="http://www.eventbrite.co.nz/e/more-than-rubies-tickets-26617899855" target="_blank">here</a>​.</div>
+
 <div class="Col-container">
     <div id="Advice" class="col"><h2>Advice for your business</h2>
 
