--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
     <title>Make A Difference</title>
     <link rel="stylesheet" media="screen" href="index.css" type="text/css">
+    <link rel="stylesheet" media="(max-width: 1000px)" href="responsive.css" />
 </head>
 <body>
 <div class="Logo">
