--- a/volunteering-opportunities.html
+++ b/volunteering-opportunities.html
@@ -12,7 +12,7 @@
 </div>
 <img class="Hero" border="0" src="img/Home-Office-lower.jpeg" width="2263" height="640" alt="Study materials on desk">
 
-<h1 class="Company-name">Good causes need your skills</h1>
+<h1 class="Company-name">Good causes need you and your professional skills</h1>
 
 <div class="Body-container">
 
